--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  /* max-width: 1440px; */
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  position: relative;
 }
 
 body {
@@ -16,7 +17,7 @@ body {
 
 nav {
   display: block;
-  z-index: 1000;
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
@@ -53,8 +54,10 @@ nav {
 }
 
 .mobile-menu {
-  transition: height 0.5s ease-out, opacity 0.5s ease-out;
+  transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
   height: 0;
+  justify-items: center;
+  align-content: center;
   width: 100%;
   position: fixed;
   top: 0;
@@ -74,13 +77,13 @@ nav {
   justify-items: center;
   align-content: center;
   opacity: 1;
-  z-index: 50;
+  z-index: -1;
   background-color: #000;
 }
 
 /* Lock scroll on body */
 body.locked {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .hero-section {
@@ -95,9 +98,7 @@ body.locked {
 }
 
 .gradient-text:nth-child(1) span {
-  background: none;
   -webkit-text-fill-color: initial;
-  -webkit-background-clip: initial;
 }
 
 .gradient-border {
@@ -105,6 +106,10 @@ body.locked {
   border-radius: 8.8px;
   border-image: linear-gradient(20deg, #9c83ff, #ff9051) 1;
   box-sizing: border-box;
+}
+
+.gradient-background {
+  background: linear-gradient(20deg, #9c83ff, #ff9051);
 }
 
 .hr-container {
@@ -120,6 +125,17 @@ body.locked {
   background: linear-gradient(45deg, #9c83ff, #ff9051);
 }
 
+.hero-floating-img {
+  filter: blur(1.2px);
+  -webkit-filter: blur(1.2px);
+}
+
+@media (min-width: 900px) and (min-height: 650px) {
+  .hero-floating-img {
+    display: inline-block;
+  }
+}
+
 .about-section,
 .experience-section,
 .project-section {
@@ -132,6 +148,15 @@ body.locked {
 .contact-subtitle {
   margin-left: 6px;
   letter-spacing: 0.3rem;
+}
+
+input,
+textarea,
+input:focus,
+textarea:focus,
+input:active,
+textarea:active {
+  background-color: rgba(245, 245, 245, 0);
 }
 
 /* Ensure text wrapping for long content */
